--- a/assignment2/BatchNormalization.ipynb
+++ b/assignment2/BatchNormalization.ipynb
@@ -24,13 +24,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "tags": [
      "pdf-ignore"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=========== You can safely ignore the message below if you are NOT working on ConvolutionalNetworks.ipynb ===========\n",
+      "\tYou will need to compile a Cython extension for a portion of this assignment.\n",
+      "\tThe instructions to do this will be given in a section of the notebook below.\n",
+      "\tThere will be an option for Colab users and another for Jupyter (local) users.\n"
+     ]
+    }
+   ],
    "source": [
     "# As usual, a bit of setup\n",
     "import time\n",
@@ -63,13 +74,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "tags": [
      "pdf-ignore"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X_train:  (49000, 3, 32, 32)\n",
+      "y_train:  (49000,)\n",
+      "X_val:  (1000, 3, 32, 32)\n",
+      "y_val:  (1000,)\n",
+      "X_test:  (1000, 3, 32, 32)\n",
+      "y_test:  (1000,)\n"
+     ]
+    }
+   ],
    "source": [
     "# Load the (preprocessed) CIFAR10 data.\n",
     "data = get_CIFAR10_data()\n",
@@ -89,9 +113,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before batch normalization:\n",
+      "  means:  [ -2.3814598  -13.18038246   1.91780462]\n",
+      "  stds:   [27.18502186 34.21455511 37.68611762]\n",
+      "\n",
+      "After batch normalization (gamma=1, beta=0)\n",
+      "  means:  [ 5.99520433e-17  5.38458167e-17 -8.04911693e-18]\n",
+      "  stds:   [0.99999999 1.         1.        ]\n",
+      "\n",
+      "After batch normalization (gamma= [1. 2. 3.] , beta= [11. 12. 13.] )\n",
+      "  means:  [11. 12. 13.]\n",
+      "  stds:   [0.99999999 1.99999999 2.99999999]\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Check the training-time forward pass by checking means and variances\n",
     "# of features both before and after batch normalization   \n",
@@ -102,7 +145,7 @@
     "X = np.random.randn(N, D1)\n",
     "W1 = np.random.randn(D1, D2)\n",
     "W2 = np.random.randn(D2, D3)\n",
-    "a = np.maximum(0, X.dot(W1)).dot(W2)\n",
+    "a = np.maximum(0, X.dot(W1)).dot(W2) # (N, D3)\n",
     "\n",
     "print('Before batch normalization:')\n",
     "print_mean_std(a,axis=0)\n",
@@ -124,9 +167,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "After batch normalization (test-time):\n",
+      "  means:  [-0.03927353 -0.04349151 -0.10452686]\n",
+      "  stds:   [1.01531399 1.01238345 0.97819961]\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Check the test-time forward pass by running the training-time\n",
     "# forward pass many times to warm up the running averages, and then\n",
@@ -172,9 +226,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dx error:  1.6674604875341426e-09\n",
+      "dgamma error:  7.417225040694815e-13\n",
+      "dbeta error:  2.379446949959628e-12\n"
+     ]
+    }
+   ],
    "source": [
     "# Gradient check batchnorm backward pass\n",
     "np.random.seed(231)\n",
@@ -254,9 +318,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dx difference:  1.8400087424475466e-12\n",
+      "dgamma difference:  0.0\n",
+      "dbeta difference:  0.0\n",
+      "speedup: 1.59x\n"
+     ]
+    }
+   ],
    "source": [
     "np.random.seed(231)\n",
     "N, D = 100, 500\n",
@@ -838,7 +913,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.7.11"
   }
  },
  "nbformat": 4,
